[package]
name = "tree-splicer-javascript"
description = "Simple grammar-based JavaScript program generator"
version = "0.5.0"
keywords = ["black-box", "fuzzer", "grammar-based", "javascript"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-splicer"
repository = "https://github.com/langston-barrett/tree-splicer"

[dependencies]
anyhow = "1"
tree-splicer = { version = "0.5.0", path = "../tree-splicer", features = ["cli"] }
tree-sitter-javascript = "0.20"