[package]
name = "tree-splicer-rust"
description = "Simple grammar-based Rust program generator"
version = "0.1.0"
keywords = ["black-box", "fuzzer", "grammar-based", "rust"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-splicer"
repository = "https://github.com/langston-barrett/tree-splicer"

[dependencies]
anyhow = "1"
tree-splicer = { version = "0.1.0", path = "../tree-splicer", features = ["cli"] }
tree-sitter-rust = "0.20"