[package]
name = "tree-splicer"
version = "0.7.0"
description = "Simple grammar-based test case generator (black-box fuzzer)"
keywords = ["black-box", "fuzzer", "grammar-based", "rust"]
edition = "2021"
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/tree-splicer"
repository = "https://github.com/langston-barrett/tree-splicer"

[lints]
workspace = true

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "3", optional = true }
log = "0.4"
nu-ansi-term = { version = "0.50", optional = true }
num_cpus = { version = "1", optional = true }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
tree-sitter = "0.26"
tree-sitter-edit = "0.4"

[features]
default = []
cli = [
  "dep:anyhow",
  "dep:clap",
  "dep:clap-verbosity-flag",
  "dep:nu-ansi-term",
  "dep:num_cpus",
  "dep:tracing-subscriber",
]
